--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -37,7 +37,10 @@
 
 <div id="navbar">
     <div class="mainTitle">MOVIE REVIEWS</div>
-    <div></div>
+    <div id="log-bar">
+        <div id="signin-bt"><a href="signin">Sign In</a></div>
+        <div id="signup-bt"><a href="signup">Sign Up</a></div>
+    </div>
 </div>
 
 
@@ -123,23 +126,7 @@
       prevScrollpos = currentScrollPos;
     }
   </script>
-<script type="text/javascript">
-    var slideIndex = 0;
-showSlides();
 
-function showSlides() {
-  var i;
-  var slides = document.getElementsByClassName("mySlides");
-  for (i = 0; i < slides.length; i++) {
-    slides[i].style.display = "none";
-  }
-  slideIndex++;
-  if (slideIndex > slides.length) {slideIndex = 1}
-  slides[slideIndex-1].style.display = "block";
-
-  setTimeout(showSlides, 2000); // Change image every 2 seconds
-}
-  </script>
 <script>
 //Get the button
 var mybutton = document.getElementById("toup");
