admin dash board adding started

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -38,8 +38,33 @@
 <div id="navbar">
     <div class="mainTitle">MOVIE REVIEWS</div>
     <div id="log-bar">
+        <div id="admin-dash"><a href="admin-dash">Admin Dashboard</a></div>
         <div id="signin-bt"><a href="signin">Sign In</a></div>
         <div id="signup-bt"><a href="signup">Sign Up</a></div>
+
+    </div>
+    <div id="tag-bar">
+        <div class="tag">Adventure</div>
+        <div class="tag">Action</div>
+        <div class="tag">Animation</div>
+        <div class="tag">Comedy</div>
+        <div class="tag">Documentary</div>
+        <div class="tag">Family</div>
+        <div class="tag">Science Fiction</div>
+        <div class="tag">Crime</div>
+        <div class="tag">Drama</div>
+        <div class="tag">Fantasy</div>
+        <div class="tag">Halloween</div>
+        <div class="tag">Horror</div>
+        <div class="tag">History</div>
+        <div class="tag">Music</div>
+        <div class="tag">Mystery</div>
+        <div class="tag">Romance</div>
+        <div class="tag">Thriller</div>
+        <div class="tag">War</div>
+        <div class="tag">Sport</div>
+
+
     </div>
 </div>
 
@@ -54,7 +79,7 @@
             <button type="submit"><i class="fa fa-search"></i></button>
         </form>
     </div>
-    <div id="tag-bar"></div>
+
 
     <div>Recently Added..</div>
 
