--- a/src/main/resources/static/css/navbar.css
+++ b/src/main/resources/static/css/navbar.css
@@ -31,3 +31,18 @@
     #singup-bt {color:white; display:inline-block; padding:5px; margin:5px;}
     #signin-bt  a {color:white}
     #signup-bt  a {color:white}
+    #admin-dash {color:white; display:inline-block; padding:5px; margin:5px;}
+    #admin-dash a {color:white; }
+    #tag-bar    {
+    display:flex;
+    justify-content:center;
+    flex-wrap:wrap;
+    }
+
+    .tag    {
+    background-color:white;
+    color:black;
+    padding:5px 10px;
+    margin:5px 10px;
+
+    }
