create post html added

--- a/src/main/resources/templates/admin_dash.html
+++ b/src/main/resources/templates/admin_dash.html
@@ -6,9 +6,9 @@
 </head>
 <body>
 <h1>Admin DashBoard</h1>
-<p><a href="">Create Post</a> </p>
-<p><a href="">Remove Post</a> </p>
-<p><a href="">Edit Post</a> </p>
-<p><a href="">Remove Users</a> </p>
+<p><a href="create_post">Create Post</a> </p>
+<p><a href="remove_post">Remove Post</a> </p>
+<p><a href="edit_post">Edit Post</a> </p>
+<p><a href="remove_users">Remove Users</a> </p>
 </body>
 </html>
