--- a/src/main/resources/static/css/img-gallery.css
+++ b/src/main/resources/static/css/img-gallery.css
@@ -9,6 +9,7 @@
       border: 1px solid #ccc;
       float: left;
       width: 360px;
+      height: 360px;
     }
 
     div.gallery:hover {
@@ -17,7 +18,7 @@
 
     div.gallery img {
       width: 100%;
-      height: auto;
+      height: 80%;
     }
 
     div.desc {
