--- a/src/main/resources/static/css/navbar.css
+++ b/src/main/resources/static/css/navbar.css
@@ -7,6 +7,7 @@
       margin:0px 0px 0px 0px;
       display: block;
       transition: top 0.3s;
+      z-index:9;
     }
     #navbar .mainTitle {
       color:white;
