--- a/src/main/resources/templates/post.html
+++ b/src/main/resources/templates/post.html
@@ -85,6 +85,7 @@ img {vertical-align: middle; height:400px; object-fit: contain;}
         <div id="admin-dash"><a href="/admin-dash">Admin Dashboard</a></div>
         <div id="signin-bt"><a href="/signin">Sign In</a></div>
         <div id="signup-bt"><a href="/signup">Sign Up</a></div>
+        <div id="home_bt"><a href="/" style="color:white; padding:5px;">Home</a></div>
 
     </div>
     <div id="tag-bar">
