--- a/src/main/resources/templates/create_post.html
+++ b/src/main/resources/templates/create_post.html
@@ -22,10 +22,11 @@
   </style>
 </head>
 <body>
+<h1>Create a Post</h1>
 <form enctype="multipart/form-data" action="savePost" id="form1" method="POST">
     <input type="submit" name="submit" style="width: 60%; margin:auto;" value="Submit Post"><br><br>
 
-    <textarea id="hiddenText" name = "postContent" style="display: inline-block;"></textarea>
+    <textarea id="hiddenText" name = "postContent" style="display: none;"></textarea>
 
 
     <label for="movieName">Movie Name</label><br>
