--- a/src/main/resources/templates/post.html
+++ b/src/main/resources/templates/post.html
@@ -86,6 +86,13 @@ img {vertical-align: middle; height:400px; object-fit: contain;}
 <div id="navbar">
     <div class="mainTitle">MOVIE REVIEWS</div>
     <div id="log-bar">
+        <a th:href="@{/update_post/{pid}(pid = ${post.id})}" style="margin:0px 5px;">
+            Edit Post
+        </a>
+        <a th:href="@{/remove_post/{pid}(pid = ${post.id})}" style="margin:0px 5px;">
+            Remove Post
+        </a>
+
         <div id="admin-dash"><a href="/admin-dash">Admin Dashboard</a></div>
         <div id="signin-bt"><a href="/signin">Sign In</a></div>
         <div id="signup-bt"><a href="/signup">Sign Up</a></div>
@@ -125,6 +132,7 @@ img {vertical-align: middle; height:400px; object-fit: contain;}
 </div>
 <br>
 <div class="main_container">
+    <button id="bt_like">Like</button>  <button id="bt_dislike">Dislike</button>
     <h1><span th:text="${post.movieName}"/></h1>
     <div>Movie Year <span th:text="${post.movieYear}"/></div>
     <div><span th:utext="${post.postContent}"/></div>
