--- a/src/main/resources/templates/create-acc.html
+++ b/src/main/resources/templates/create-acc.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+
 <style>
 body {font-family: Arial, Helvetica, sans-serif;}
 * {box-sizing: border-box; margin: auto; padding: 20px 0px 0px 0px;}
@@ -71,6 +75,7 @@ button:hover {
   }
 }
 </style>
+</head>
 <body>
 
 <form action="/action_page.php" style="border:1px solid #ccc; max-width: 70%;">
