--- a/src/main/resources/templates/create_post.html
+++ b/src/main/resources/templates/create_post.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="utf-8">
     <title></title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="https://cdn.rawgit.com/harvesthq/chosen/gh-pages/chosen.jquery.min.js"></script>
     <link href="https://cdn.rawgit.com/harvesthq/chosen/gh-pages/chosen.min.css" rel="stylesheet"/>
@@ -21,7 +23,8 @@
 
   </style>
 </head>
-<body>
+<body class="p-2 my-2">
+<a href="/" class="btn btn-primary">Main Page</a>
 <h1>Create a Post</h1>
 <form enctype="multipart/form-data" action="savePost" id="form1" method="POST">
     <input type="submit" name="submit" style="width: 60%; margin:auto;" value="Submit Post"><br><br>
