--- a/src/main/resources/templates/post.html
+++ b/src/main/resources/templates/post.html
@@ -2,6 +2,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Permanent+Marker&display=swap" rel="stylesheet">
 
@@ -130,27 +133,34 @@ img {vertical-align: middle; height:400px; object-fit: contain;}
         <div class="text" th:text="${post.movieName}"/>
     </div>
 </div>
+
+
+
+
+
+
 <br>
-<div class="main_container">
-    <button id="bt_like">Like</button>  <button id="bt_dislike">Dislike</button>
+<div class="main_container px-5">
+    <button id="bt_like" class="btn btn-primary"><i class="bi bi-hand-thumbs-up-fill"> Like </i></button>  <button id="bt_dislike" class="btn btn-primary"><i class="bi bi-hand-thumbs-down-fill"> Dislike </i></button>
     <h1><span th:text="${post.movieName}"/></h1>
     <div>Movie Year <span th:text="${post.movieYear}"/></div>
-    <div><span th:utext="${post.postContent}"/></div>
-    <div>Comments Section</div>
+    <div style="padding:100px"><span th:utext="${post.postContent}"/></div>
+    <hr/>
+    <div class="">Comments Section</div>
     <div name="comment-frame" class="comment-frame">
         <div class="pagination"></div>
-        <div class="add-comment">
-            <textarea id="comment-area"></textarea>
-            <button id="bt-clear">Clear</button>
-            <button id="bt-post">Post Comment</button>
+        <div class="add-comment my-3"> <br/>
+            <textarea id="comment-area" class="form-control mx-2 my-3"></textarea>
+            <button id="bt-clear" class="btn btn-secondary">Clear</button>
+            <button id="bt-post" class="btn btn-primary">Post Comment</button>
         </div>
         <div id="user-comments">
 
         </div>
-        <div th:each="mcomment:${post.userComments}">
-            <div th:text="${mcomment.userName}"></div>
-            <div th:text="${mcomment.comment}"></div>
-            <div th:text="${mcomment.commentDate}"></div>
+        <div th:each="mcomment:${post.userComments}" class="card shadow rounded w-75 my-1 ms-4">
+            <div class="card-header"> <span th:text="${mcomment.userName}"></span> |||| <span th:text="${mcomment.commentDate}"></span></div>
+            <div th:text="${mcomment.comment}" class="card-body"></div>
+<!--            <div th:text="${mcomment.commentDate}"></div>-->
         </div>
 
     </div>
@@ -186,6 +196,8 @@ function showSlides() {
 
 /*]]>*/
 </script>
+
+
 </body>
 </html>
 
@@ -202,9 +214,12 @@ function showSlides() {
     let newComment = document.createElement('div');
     let commentBar = document.createElement('div');
     let commentContent = document.createElement('div');
-    newComment.className = "new-comment";
-    commentBar.className = "comment-bar";
-    commentContent.className = "comment-content";
+<!--    newComment.className = "new-comment";  -->
+    newComment.className = "card shadow rounded w-75 my-1 ms-4";
+<!--    commentBar.className = "comment-bar";-->
+    commentBar.className = "card-header";
+<!--    commentContent.className = "comment-content";-->
+    commentContent.className = "card-body";
     commentContent.textContent = commentArea.value;
     let date = new Date();
     let cobj={userName:"An User",comment:commentArea.value,date:date,pid:pd};
