--- a/src/main/resources/templates/update_post.html
+++ b/src/main/resources/templates/update_post.html
@@ -2,6 +2,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <title></title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="https://cdn.rawgit.com/harvesthq/chosen/gh-pages/chosen.jquery.min.js"></script>
@@ -23,12 +25,12 @@
 </head>
 <body>
 <h2>Edit Post</h2>
-<form enctype="multipart/form-data" action="/" id="form1" method="POST">
+<form enctype="multipart/form-data" th:action="@{/saveUpdatedPost/{postId}(postId=${post.id})}" id="form1" method="POST">
     <input type="submit" name="submit" style="width: 60%; margin:auto;" value="Submit Post"><br><br>
 
     <textarea id="hiddenText" name = "postContent" style="display: none;"></textarea>
 
-
+    <div th:text="${post.id}"></div>
     <label for="movieName">Movie Name</label><br>
     <input type="text" name="movieName" th:value="${post.movieName}"><br><br>
 
